fix css on mobile for choices

--- a/f.css
+++ b/f.css
@@ -71,7 +71,7 @@ a.list-group-item.active:hover{background:#444;border:1px solid #222}
 p.under-btn{text-align:left;margin-top:20px}
 h3.panel-head{margin:5px 0 0 0;font-size:26px;color:#fff}
 .smaller-item{font:.8em 'Helvetica Neue',sans-serif;padding:5px 0 5px 10px}
-@media (max-width:1200px){h3.panel-head{font-size:22px} .select-next{min-height:300px}}@media (max-width:750px){p.banner .select-next{min-height:100px} .smaller-item{font-size:1em;padding:15px 0 15px 10px}}@media (max-width:720px){.logo-header-section{margin:20px 40px 0 0}}.technical-diagram{margin:10px 0 5px 0}
+@media (max-width:1200px){h3.panel-head{font-size:22px} .select-next{min-height:300px}}@media (max-width:750px){.select-next{min-height:100px} .smaller-item{font-size:1em;padding:15px 0 15px 10px}}@media (max-width:720px){.logo-header-section{margin:20px 40px 0 0}}.technical-diagram{margin:10px 0 5px 0}
 .see-also{margin-top:20px;background:#22B24C;color:#eee;font-family:"Helvetica Neue",sans-serif}
 .see-also a{color: #fff}
 .toc-more-indent{padding:0 0 1px 37px;font-family:"Helvetica Neue",sans-serif}
